# Wudcutt

./: .gitignore  README.md  Wüdcutt.py  pyproject.toml  requirements.txt
assets/copy/d-rer-the-rhinoceros-unknown/: listing.md
assets/copy/durer-the-four-horsemen-unknown/: listing.md
assets/copy/durer-the-rhinoceros-unknown/: listing.md
assets/copy/holbein-dance-of-death-the-cardinal-unknown/: listing.md
assets/copy/holbein-dance-of-death-the-coat-of-arms-of-death-1929-171-cleveland-museum-of-art-1929/: listing.md
assets/copy/unknown-four-horsemen-of-the-apocalypse-by-d-rer-unknown/: listing.md
assets/metadata/d-rer-the-rhinoceros-unknown/: metadata.json
docs/: ASSET_SCHEMA.md  PUBLIC_DOMAIN_WOODCUT_WORKFLOW.md  REPO_INSPECTION.md
docs/plans/: 2026-04-17-wudcutt-expansion.md  2026-04-17-wudcutt-next-round.md
exports/: CURATION_NOTES.md  curation.csv  marketplace-curated.csv  marketplace-final.csv
tests/: conftest.py  test_catalog.py  test_cli.py  test_cli_search.py  test_copywriting.py  test_downloads.py  test_downloads_advanced.py  test_internet_archive_source.py  test_loc_source.py  test_marketplace_export.py  test_metmuseum_source.py  test_models.py  test_nypl_source.py  test_processing.py  test_rijksmuseum_source.py  test_scoring.py  test_wellcome_source.py  test_wikimedia_source.py
wudcutt/: __init__.py  catalog.py  cli.py  copywriting.py  downloads.py  marketplace.py  models.py  processing.py  scoring.py
wudcutt/sources/: __init__.py  base.py  internet_archive.py  loc.py  metmuseum.py  nypl.py  rijksmuseum.py  wellcome.py  wikimedia.py
(+5 files in other folders)
